--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,25 +19,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="150" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ye5-09-RqE">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="300" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ye5-09-RqE">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dealListingCell" id="dwu-MA-n3j">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="150"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="300"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dwu-MA-n3j" id="uKv-iy-HvO">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" image="Food22449.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="5z1-ii-QAV">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="120" id="4OW-Fh-Y2Z"/>
+                                                        <constraint firstAttribute="height" constant="220" id="4OW-Fh-Y2Z"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="szs-Kt-p7u">
-                                                    <rect key="frame" x="0.0" y="75" width="375" height="45"/>
+                                                    <rect key="frame" x="0.0" y="175" width="375" height="45"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enjoy rich and tasty food from Cafe Truffle! Get Chicken Burger and Vanilla shake at ₹99 instead of ₹180" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pjt-BQ-LeB">
                                                             <rect key="frame" x="10" y="0.0" width="355" height="45"/>
@@ -54,14 +55,66 @@
                                                         <constraint firstItem="Pjt-BQ-LeB" firstAttribute="leading" secondItem="szs-Kt-p7u" secondAttribute="leading" constant="10" id="vII-90-olc"/>
                                                     </constraints>
                                                 </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="restaurent" translatesAutoresizingMaskIntoConstraints="NO" id="2Ij-Id-Jl1">
+                                                    <rect key="frame" x="15" y="230" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="P0c-q5-fRe"/>
+                                                        <constraint firstAttribute="width" constant="20" id="YDY-Pm-D9c"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOS-sA-i6k">
+                                                    <rect key="frame" x="15" y="255" width="76" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9c7-iF-AgV">
+                                                    <rect key="frame" x="242.5" y="256" width="76" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cafe Truffle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhw-wY-8XY">
+                                                    <rect key="frame" x="40" y="232" width="75" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="199" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2h-Tj-mv4">
+                                                    <rect key="frame" x="101" y="255" width="22.5" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKm-Ap-TQ3">
+                                                    <rect key="frame" x="328.5" y="255.5" width="16.5" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="j2h-Tj-mv4" firstAttribute="leading" secondItem="SOS-sA-i6k" secondAttribute="trailing" constant="10" id="0PW-Jg-22L"/>
                                                 <constraint firstAttribute="trailing" secondItem="szs-Kt-p7u" secondAttribute="trailing" id="5ge-nc-WuT"/>
                                                 <constraint firstItem="szs-Kt-p7u" firstAttribute="bottom" secondItem="5z1-ii-QAV" secondAttribute="bottom" id="Ch9-ZP-edP"/>
+                                                <constraint firstItem="fhw-wY-8XY" firstAttribute="centerY" secondItem="2Ij-Id-Jl1" secondAttribute="centerY" id="Dtf-wV-ogc"/>
                                                 <constraint firstItem="5z1-ii-QAV" firstAttribute="leading" secondItem="uKv-iy-HvO" secondAttribute="leading" id="E4s-ED-aeo"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="LKm-Ap-TQ3" secondAttribute="trailing" constant="15" id="GpO-Rh-g2e"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="j2h-Tj-mv4" secondAttribute="trailing" constant="20" symbolic="YES" id="LZC-4q-pYf"/>
+                                                <constraint firstItem="2Ij-Id-Jl1" firstAttribute="top" secondItem="5z1-ii-QAV" secondAttribute="bottom" constant="10" id="Rdc-p4-yHm"/>
+                                                <constraint firstItem="SOS-sA-i6k" firstAttribute="top" secondItem="2Ij-Id-Jl1" secondAttribute="bottom" constant="5" id="RmX-jm-v2k"/>
+                                                <constraint firstItem="SOS-sA-i6k" firstAttribute="leading" secondItem="uKv-iy-HvO" secondAttribute="leadingMargin" id="awK-k3-mwJ"/>
                                                 <constraint firstAttribute="trailing" secondItem="5z1-ii-QAV" secondAttribute="trailing" id="bGh-TD-neW"/>
+                                                <constraint firstItem="9c7-iF-AgV" firstAttribute="centerY" secondItem="j2h-Tj-mv4" secondAttribute="centerY" id="cPA-KR-7dc"/>
+                                                <constraint firstItem="2Ij-Id-Jl1" firstAttribute="leading" secondItem="uKv-iy-HvO" secondAttribute="leading" constant="15" id="f43-Ba-xu5"/>
+                                                <constraint firstItem="j2h-Tj-mv4" firstAttribute="centerY" secondItem="SOS-sA-i6k" secondAttribute="centerY" id="f5R-hY-ugt"/>
+                                                <constraint firstItem="LKm-Ap-TQ3" firstAttribute="centerY" secondItem="9c7-iF-AgV" secondAttribute="centerY" id="hth-UT-Ak2"/>
                                                 <constraint firstItem="szs-Kt-p7u" firstAttribute="leading" secondItem="uKv-iy-HvO" secondAttribute="leading" id="ig4-B5-FAs"/>
                                                 <constraint firstItem="5z1-ii-QAV" firstAttribute="top" secondItem="uKv-iy-HvO" secondAttribute="top" id="ise-Ty-gTp"/>
+                                                <constraint firstItem="LKm-Ap-TQ3" firstAttribute="leading" secondItem="9c7-iF-AgV" secondAttribute="trailing" constant="10" id="mqs-K2-A62"/>
+                                                <constraint firstItem="fhw-wY-8XY" firstAttribute="leading" secondItem="2Ij-Id-Jl1" secondAttribute="trailing" constant="5" id="tOk-BQ-AiI"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fhw-wY-8XY" secondAttribute="trailing" constant="20" symbolic="YES" id="tZX-Nv-WXU"/>
+                                                <constraint firstItem="9c7-iF-AgV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="uKv-iy-HvO" secondAttribute="leading" constant="20" symbolic="YES" id="wOu-gV-wQg"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -97,11 +150,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Food22449.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="onM-EA-TqW">
-                                <rect key="frame" x="0.0" y="20" width="375" height="300"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="tga-DB-PLT"/>
+                                    <constraint firstAttribute="height" constant="150" id="tga-DB-PLT"/>
                                 </constraints>
                             </imageView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="37I-Ib-rdi">
+                                <rect key="frame" x="0.0" y="170" width="375" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Details"/>
+                                    <segment title="Conditions"/>
+                                    <segment title=""/>
+                                    <segment title=""/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -115,7 +178,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rm2-S8-oaz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="836" y="394"/>
+            <point key="canvasLocation" x="836" y="393.55322338830587"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="acO-1K-dAA">
@@ -182,5 +245,6 @@
     </scenes>
     <resources>
         <image name="Food22449.jpeg" width="375" height="120"/>
+        <image name="restaurent" width="24" height="24"/>
     </resources>
 </document>
