--- a/Deals/Custom Cells/HotDealCollectionViewCell.xib
+++ b/Deals/Custom Cells/HotDealCollectionViewCell.xib
@@ -50,14 +50,15 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpY-ZS-hDI">
-                                        <rect key="frame" x="12" y="150" width="7" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vpY-ZS-hDI">
+                                        <rect key="frame" x="12" y="150" width="154.5" height="17"/>
                                         <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 km away" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rdE-wr-OKM">
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0 km away" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rdE-wr-OKM">
                                         <rect key="frame" x="27" y="168.5" width="61.5" height="14"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="12"/>
                                         <color key="textColor" red="0.63921568627450975" green="0.63921568627450975" blue="0.63921568627450975" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -65,8 +66,8 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MGC-ne-C0J">
-                                        <rect key="frame" x="181.5" y="148" width="42" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MGC-ne-C0J">
+                                        <rect key="frame" x="181.5" y="148.5" width="42" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -74,13 +75,10 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="address" translatesAutoresizingMaskIntoConstraints="NO" id="BIS-Kh-GcS">
+                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="address" translatesAutoresizingMaskIntoConstraints="NO" id="BIS-Kh-GcS">
                                         <rect key="frame" x="12" y="169" width="11" height="13"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="11" id="W81-Nk-reD"/>
-                                            <constraint firstAttribute="height" constant="13" id="ccp-ca-vpX"/>
-                                        </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                         </userDefinedRuntimeAttributes>
@@ -119,7 +117,7 @@
                                             <action selector="makeFavouriteButtonClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="9C0-E9-MX7"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iG8-pk-K4N">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iG8-pk-K4N">
                                         <rect key="frame" x="235.5" y="150" width="37.5" height="17"/>
                                         <fontDescription key="fontDescription" name="SFProText-Semibold" family="SF Pro Text" pointSize="14"/>
                                         <color key="textColor" red="0.16078431372549018" green="0.80000000000000004" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
@@ -132,18 +130,15 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="vpY-ZS-hDI" firstAttribute="leading" secondItem="jBb-yP-pQN" secondAttribute="leading" constant="12" id="4em-Xu-61c"/>
-                                    <constraint firstItem="BIS-Kh-GcS" firstAttribute="leading" secondItem="vpY-ZS-hDI" secondAttribute="leading" id="8XY-NQ-QJW"/>
                                     <constraint firstItem="vpY-ZS-hDI" firstAttribute="top" secondItem="acf-MZ-P6I" secondAttribute="bottom" constant="12" id="8bk-3v-d4Z"/>
                                     <constraint firstItem="8Yj-vQ-4SP" firstAttribute="bottom" secondItem="acf-MZ-P6I" secondAttribute="bottom" constant="-10" id="Cm9-Jv-Loo"/>
                                     <constraint firstItem="iG8-pk-K4N" firstAttribute="centerY" secondItem="MGC-ne-C0J" secondAttribute="centerY" id="M3Z-cM-Pzq"/>
                                     <constraint firstItem="iG8-pk-K4N" firstAttribute="leading" secondItem="MGC-ne-C0J" secondAttribute="trailing" constant="12" id="MNz-fi-iUR"/>
                                     <constraint firstItem="acf-MZ-P6I" firstAttribute="leading" secondItem="jBb-yP-pQN" secondAttribute="leading" id="MP1-B7-9bN"/>
                                     <constraint firstAttribute="trailing" secondItem="8Yj-vQ-4SP" secondAttribute="trailing" constant="10" id="Nwr-bA-2sc"/>
-                                    <constraint firstItem="rdE-wr-OKM" firstAttribute="leading" secondItem="BIS-Kh-GcS" secondAttribute="trailing" constant="4" id="OZe-Ml-3c1"/>
-                                    <constraint firstItem="rdE-wr-OKM" firstAttribute="centerY" secondItem="BIS-Kh-GcS" secondAttribute="centerY" id="QEQ-t8-hpj"/>
                                     <constraint firstAttribute="trailing" secondItem="acf-MZ-P6I" secondAttribute="trailing" id="UMA-yl-pd1"/>
                                     <constraint firstItem="Igm-mk-Ry6" firstAttribute="leading" secondItem="jBb-yP-pQN" secondAttribute="leading" constant="12" id="W5h-51-SoF"/>
-                                    <constraint firstItem="BIS-Kh-GcS" firstAttribute="top" secondItem="vpY-ZS-hDI" secondAttribute="bottom" constant="2" id="hFV-14-roM"/>
+                                    <constraint firstItem="MGC-ne-C0J" firstAttribute="leading" secondItem="vpY-ZS-hDI" secondAttribute="trailing" constant="15" id="a57-P4-OcS"/>
                                     <constraint firstItem="Igm-mk-Ry6" firstAttribute="top" secondItem="vpY-ZS-hDI" secondAttribute="bottom" constant="15" id="lnY-vQ-TLD"/>
                                     <constraint firstItem="F4x-1e-iaR" firstAttribute="top" secondItem="jBb-yP-pQN" secondAttribute="top" constant="13" id="myw-tG-BNU"/>
                                     <constraint firstItem="MGC-ne-C0J" firstAttribute="centerY" secondItem="vpY-ZS-hDI" secondAttribute="centerY" id="pbU-wa-5YY"/>
